<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="pref_num_players"
        android:title="@string/num_players"
        android:entries="@array/num_players_entries"
        android:entryValues="@array/num_players_values"
        android:defaultValue="2"
        android:summary="%s" />

    <ListPreference
        android:key="pref_deck_count"
        android:title="@string/deck_count"
        android:entries="@array/deck_count_entries"
        android:entryValues="@array/deck_count_values"
        android:defaultValue="3"
        android:summary="%s" />

    <ListPreference
        android:key="pref_hand_size"
        android:title="@string/hand_size"
        android:entries="@array/hand_size_entries"
        android:entryValues="@array/hand_size_values"
        android:defaultValue="19"
        android:summary="%s" />

    <ListPreference
        android:key="pref_swoop_value"
        android:title="@string/swoop_card_points"
        android:entries="@array/swoop_value_entries"
        android:entryValues="@array/swoop_value_values"
        android:defaultValue="50"
        android:summary="%s" />

    <ListPreference
        android:key="pref_ai_difficulty"
        android:title="@string/ai_difficulty"
        android:entries="@array/ai_diff_entries"
        android:entryValues="@array/ai_diff_values"
        android:defaultValue="NEWBIE"
        android:summary="%s" />

    <!-- NEW: Game ending total -->
    <ListPreference
        app:key="pref_end_total"
        app:title="@string/game_end_total"
        app:entries="@array/end_total_entries"
        app:entryValues="@array/end_total_values"
        app:defaultValue="500"
        app:summary="%s" />

    <SwitchPreferenceCompat
        android:key="pref_allow_landscape"
        android:title="@string/allow_landscape"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="pref_dev_mode"
        android:title="@string/developer_mode"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="false" />

    <PreferenceCategory
        app:key="pref_help_category"
        app:title="Help &amp; Info">

        <Preference
            app:key="pref_instructions"
            app:title="Instructions"
            app:summary="How to play Swoop" />

        <Preference
            app:key="pref_game_rules"
            app:title="Game Rules"
            app:summary="Detailed rules of the game" />

    </PreferenceCategory>


</PreferenceScreen>
