<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app   ="http://schemas.android.com/apk/res-auto">

    <!-- 1) Show current score -->
    <item
        android:id="@+id/action_show_scores"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_show_scores"
        app:showAsAction="never"
        android:orderInCategory="100" />

    <!-- 2) Help -->
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_help"
        app:showAsAction="never"
        android:orderInCategory="101" />

    <!-- 3) Settings -->
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
